test/invalid-syntax/54394_let_misspelled/let_misspelled.agu
-- Author: 54394, Afonso Esteves

lot my_iq : Int = 0

